force-app/main/default/objects/Job_Shubham__c/Job_Shubham__c.object-meta.xml
<CustomObject>
    <label>Job_Shubham</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Job_Shubham Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job_Shubhams</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>