force-app/main/default/objects/Job_Shubham__c/fields/Certification_required__c.field-meta.xml
<CustomField>
    <fullName>Certification_required__c</fullName>
    <label>Certification required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CISCO</fullName>
            </value>
            <value>
                <fullName>CMP</fullName>
            </value>
            <value>
                <fullName>IBM</fullName>
            </value>
            <value>
                <fullName>Microsoft</fullName>
            </value>
            <value>
                <fullName>MPM</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>PMP</fullName>
            </value>
            <value>
                <fullName>RedHat</fullName>
            </value>
            <value>
                <fullName>SAS</fullName>
            </value>
            <value>
                <fullName>Sun Certified</fullName>
            </value>
            <value>
                <fullName>Sybase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>