force-app/main/default/objects/Job_Shubham__c/fields/Qualification_required__c.field-meta.xml
<CustomField>
    <fullName>Qualification_required__c</fullName>
    <label>Qualification required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BBA</fullName>
            </value>
            <value>
                <fullName>BCom</fullName>
            </value>
            <value>
                <fullName>BSc</fullName>
            </value>
            <value>
                <fullName>BTech</fullName>
            </value>
            <value>
                <fullName>MBA</fullName>
            </value>
            <value>
                <fullName>MSC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>