force-app/main/default/objects/Job_Shubham__c/fields/Salary_offered__c.field-meta.xml
<CustomField>
    <fullName>Salary_offered__c</fullName>
    <label>Salary offered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>