force-app/main/default/objects/Job_Shubham__c/fields/Skills_required__c.field-meta.xml
<CustomField>
    <fullName>Skills_required__c</fullName>
    <label>Skills required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>.Net</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>C++</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>Linux</fullName>
            </value>
            <value>
                <fullName>Networking</fullName>
            </value>
            <value>
                <fullName>People Skills</fullName>
            </value>
            <value>
                <fullName>PHP</fullName>
            </value>
            <value>
                <fullName>Self-Management</fullName>
            </value>
            <value>
                <fullName>team Player</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>