force-app/main/default/objects/Job_Shubham__c/fields/Total_Applicants__c.field-meta.xml
<CustomField>
    <fullName>Total_Applicants__c</fullName>
    <label>Total Applicants</label>
    <summaryForeignKey>Candidate_Shubham__c.Job_Shubham__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>