force-app/main/default/objects/Job_Shubham__c/recordTypes/demo1.recordType-meta.xml
<RecordType>
    <fullName>demo1</fullName>
    <active>true</active>
    <label>demo1</label>
</RecordType>