force-app/main/default/objects/Job_Shubham__c/recordTypes/Tester.recordType-meta.xml
<RecordType>
    <fullName>Tester</fullName>
    <active>false</active>
    <label>Tester</label>
</RecordType>