force-app/main/default/objects/Job_Shubham__c/validationRules/Email_Vaildate.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Vaildate</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISNULL( Hired_Applicants__c ), ( Hired_Applicants__c  &lt;= 1) )</errorConditionFormula>
    <errorDisplayField>Total_position__c</errorDisplayField>
    <errorMessage>Value is less than 1, please enter valid data</errorMessage>
</ValidationRule>