force-app/main/default/objects/Job_Shubham__c/validationRules/Skill_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Skill_required</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
   PICKLISTCOUNT( Skills_required__c ) &lt; 1,
   PICKLISTCOUNT( Skills_required__c ) &gt; 3
)</errorConditionFormula>
    <errorDisplayField>Skills_required__c</errorDisplayField>
    <errorMessage>Skills in between 1 and 3 only</errorMessage>
</ValidationRule>